--- a/src/app/serenazgo/home/home.component.html
+++ b/src/app/serenazgo/home/home.component.html
@@ -4,6 +4,7 @@
   <!-- /dashboard/usuarios -->
   <button routerLink="/serenazgo/unidad" mat-button>Unidad</button>
   <button routerLink="/serenazgo/sereno" mat-button>Sereno</button>
+  <button routerLink="/serenazgo/serenos" mat-button>Serenos</button>
   <button mat-button>Item 1</button>
   <button mat-button>Item 2</button>
   <button mat-button>Item 3</button>
