--- a/src/app/serenazgo/serenos/addedit-serenos/addedit-serenos.component.html
+++ b/src/app/serenazgo/serenos/addedit-serenos/addedit-serenos.component.html
@@ -1,1 +1,81 @@
-<p>addedit-serenos works!</p>
+<form [formGroup]="form" autocomplete="off" (ngSubmit)="addEditSereno()">
+  <mat-card style="margin: auto 13vw">
+    <mat-card-header>
+      <mat-card-title>Agregar Sereno</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <!-- Dni -->
+      <mat-form-field class="cimput">
+        <mat-label>Dni</mat-label>
+        <input matInput formControlName="dni" type="number" />
+      </mat-form-field>
+
+      <!-- Nombre -->
+      <mat-form-field class="cimput">
+        <mat-label>Nombre</mat-label><input matInput formControlName="nombre" />
+      </mat-form-field>
+
+      <!-- Apellidos -->
+      <mat-form-field class="cimput">
+        <mat-label>Apellidos</mat-label
+        ><input matInput formControlName="apellidos" />
+      </mat-form-field>
+
+      <!-- Genero -->
+      <mat-radio-group
+        class="cimput"
+        aria-label="Select an option"
+        formControlName="genero"
+      >
+        <mat-radio-button style="margin: auto 25px 17px auto" value="1"
+          >Masculino</mat-radio-button
+        >
+        <mat-radio-button value="0">Femenino</mat-radio-button>
+      </mat-radio-group>
+
+      <!-- Celular -->
+      <mat-form-field class="cimput">
+        <mat-label>Celular</mat-label
+        ><input matInput formControlName="celular" />
+      </mat-form-field>
+
+      <!-- Correo -->
+      <mat-form-field class="cimput">
+        <mat-label>Correo</mat-label><input matInput formControlName="correo" />
+      </mat-form-field>
+
+      <!-- Direccion -->
+      <mat-form-field class="cimput">
+        <mat-label>Dirección</mat-label
+        ><input matInput formControlName="direccion" />
+      </mat-form-field>
+
+      <!-- Nacimiento -->
+      <mat-form-field class="cimput">
+        <mat-label>Nacimiento</mat-label>
+        <input matInput [matDatepicker]="picker" formControlName="nacimiento" />
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="picker"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+
+      <!-- Otro.... -->
+    </mat-card-content>
+    <mat-card-actions align="end">
+      <button
+        [disabled]="form.invalid"
+        type="submit"
+        color="primary"
+        mat-button
+      >
+        Guardar
+      </button>
+      <button type="button" color="warn" mat-button (click)="btnCancelar()">
+        Cancelar
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</form>
