--- a/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
+++ b/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
@@ -3,6 +3,66 @@
     <mat-card-title>Lista de serenos</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <mat-divider></mat-divider>
+    <table mat-table class="mat-elevation-z8" [dataSource]="listSerenos">
+      <!-- Column -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+      </ng-container>
+
+      <!-- Column -->
+      <ng-container matColumnDef="apellidos">
+        <th mat-header-cell *matHeaderCellDef>Apellidos</th>
+        <td mat-cell *matCellDef="let element">{{ element.apellidos }}</td>
+      </ng-container>
+
+      <!-- Column -->
+      <ng-container matColumnDef="genero">
+        <th mat-header-cell *matHeaderCellDef>Genero</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.genero ? "Masculino" : "Femenino" }}
+        </td>
+      </ng-container>
+
+      <!-- Column -->
+      <ng-container matColumnDef="edad">
+        <th mat-header-cell *matHeaderCellDef>Edad</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.nacimiento | edad }}
+        </td>
+      </ng-container>
+
+      <!-- Column -->
+      <ng-container matColumnDef="iconos">
+        <th mat-header-cell *matHeaderCellDef>Acción</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn" aria-label="Example">
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            color="primary"
+            aria-label="Example"
+            matTooltip="info"
+          >
+            <mat-icon>info</mat-icon>
+          </button>
+          <button mat-icon-button color="accent" aria-label="Example">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <!-- Column -->
+      <ng-container matColumnDef="imagen">
+        <th mat-header-cell *matHeaderCellDef>Imagen</th>
+        <td mat-cell *matCellDef="let element">
+          <img class="imgsereno" [src]="element.imagen" />
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnas"></tr>
+    </table>
   </mat-card-content>
 </mat-card>
