--- a/src/app/serenazgo/serenos/home-serenos/home-serenos.component.html
+++ b/src/app/serenazgo/serenos/home-serenos/home-serenos.component.html
@@ -6,6 +6,7 @@
         mat-raised-button
         color="primary"
         routerLink="/serenazgo/serenos/addedit"
+        *ngIf="badge"
       >
         <mat-icon>add</mat-icon> AGREGAR
       </button>
