--- a/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
+++ b/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
@@ -3,22 +3,30 @@
     <mat-card-title>Lista de serenos</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <table mat-table class="mat-elevation-z8" [dataSource]="listSerenos">
+    <mat-form-field style="width: 100%">
+      <mat-label> Filtro </mat-label>
+      <input
+        (keyup)="applyFilter($event)"
+        matInput
+        placeholder="Ingrese sereno"
+      />
+    </mat-form-field>
+    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource" matSort>
       <!-- Column -->
       <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
         <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
       </ng-container>
 
       <!-- Column -->
       <ng-container matColumnDef="apellidos">
-        <th mat-header-cell *matHeaderCellDef>Apellidos</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Apellidos</th>
         <td mat-cell *matCellDef="let element">{{ element.apellidos }}</td>
       </ng-container>
 
       <!-- Column -->
       <ng-container matColumnDef="genero">
-        <th mat-header-cell *matHeaderCellDef>Genero</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Genero</th>
         <td mat-cell *matCellDef="let element">
           {{ element.genero ? "Masculino" : "Femenino" }}
         </td>
@@ -26,9 +34,9 @@
 
       <!-- Column -->
       <ng-container matColumnDef="edad">
-        <th mat-header-cell *matHeaderCellDef>Edad</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Edad</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.nacimiento | edad }}
+          {{ element.edad }}
         </td>
       </ng-container>
 
@@ -47,7 +55,12 @@
           >
             <mat-icon>info</mat-icon>
           </button>
-          <button mat-icon-button color="accent" aria-label="Example">
+          <button
+            mat-icon-button
+            color="accent"
+            aria-label="Example"
+            [routerLink]="['/serenazgo/serenos/editar', element.id_sereno]"
+          >
             <mat-icon>edit</mat-icon>
           </button>
         </td>
@@ -64,5 +77,8 @@
       <tr mat-header-row *matHeaderRowDef="columnas"></tr>
       <tr mat-row *matRowDef="let row; columns: columnas"></tr>
     </table>
+
+    <!-- Paginación -->
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
   </mat-card-content>
 </mat-card>
