--- a/src/app/serenazgo/serenos/home-serenos/home-serenos.component.html
+++ b/src/app/serenazgo/serenos/home-serenos/home-serenos.component.html
@@ -1,6 +1,6 @@
 <p>
   <mat-toolbar class="mat-flex">
-    <span>My Application</span>
+    <span>Serenazgo</span>
     <span>
       <button
         mat-raised-button
