--- a/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
+++ b/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
@@ -43,15 +43,22 @@
       <!-- Column -->
       <ng-container matColumnDef="iconos">
         <th mat-header-cell *matHeaderCellDef>Acción</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button color="warn" aria-label="Example">
+        <td mat-cell *matCellDef="let element; let i = index">
+          <button
+            mat-icon-button
+            color="warn"
+            aria-label="Example"
+            matTooltip="Eliminar"
+            (click)="eliminar(element.id_sereno)"
+          >
             <mat-icon>delete</mat-icon>
           </button>
           <button
             mat-icon-button
             color="primary"
             aria-label="Example"
-            matTooltip="info"
+            matTooltip="Ver más"
+            [routerLink]="['/serenazgo/serenos/versereno', element.id_sereno]"
           >
             <mat-icon>info</mat-icon>
           </button>
@@ -59,6 +66,7 @@
             mat-icon-button
             color="accent"
             aria-label="Example"
+            matTooltip="Editar"
             [routerLink]="['/serenazgo/serenos/editar', element.id_sereno]"
           >
             <mat-icon>edit</mat-icon>
@@ -79,6 +87,6 @@
     </table>
 
     <!-- Paginación -->
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 20, 30]"></mat-paginator>
   </mat-card-content>
 </mat-card>
