--- a/src/app/serenazgo/unidad/home-unidad/home-unidad.component.html
+++ b/src/app/serenazgo/unidad/home-unidad/home-unidad.component.html
@@ -1,12 +1,11 @@
 <p>
   <mat-toolbar class="mat-flex">
-    <span>Gestión de Serenos</span>
+    <span>Gestión de Unidades</span>
     <span>
       <button
         mat-raised-button
         color="primary"
         routerLink="/serenazgo/serenos/addedit"
-        *ngIf="badge"
       >
         <mat-icon>add</mat-icon> AGREGAR
       </button>
