--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -31,6 +31,7 @@
               (click)="hide = !hide"
               [attr.aria-label]="'Ocultar contraseña'"
               [attr.aria-pressed]="hide"
+              type="button"
             >
               <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
             </button>
@@ -49,7 +50,7 @@
         </mat-card-actions>
         <mat-card-footer>
           <a href="#">Olvidé mi contraseña</a> <br />
-          <a href="#">Registrarse</a>
+          <a routerLink="/auth/registrarse">Registrarse</a>
         </mat-card-footer>
       </form>
     </mat-card>
