--- a/src/app/serenazgo/home/home.component.html
+++ b/src/app/serenazgo/home/home.component.html
@@ -6,7 +6,13 @@
   <button routerLink="/serenazgo/sereno" mat-button>Sereno</button>
   <button routerLink="/serenazgo/serenos" mat-button>Serenos</button>
   <span class="example-spacer"></span>
-  <mat-icon>logout</mat-icon>
+  <mat-icon
+    matTooltip="Cerrar sesión"
+    matTooltipPosition="left"
+    style="cursor: pointer"
+    (click)="logout()"
+    >logout</mat-icon
+  >
 </mat-toolbar>
 
 <router-outlet></router-outlet>
