--- a/src/app/serenazgo/unidad/lista-unidad/lista-unidad.component.html
+++ b/src/app/serenazgo/unidad/lista-unidad/lista-unidad.component.html
@@ -22,7 +22,7 @@
         >Auto</mat-card-subtitle
       >
       <mat-card-subtitle *ngIf="unid.fk_tipo_unidad === 3"
-        >Motocileta</mat-card-subtitle
+        >Motocicleta</mat-card-subtitle
       >
       <mat-card-subtitle *ngIf="unid.fk_tipo_unidad === 4"
         >Camión</mat-card-subtitle
