--- a/src/app/serenazgo/home/home.component.css
+++ b/src/app/serenazgo/home/home.component.css
@@ -1,3 +1,13 @@
 .example-spacer {
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
 }
+
+
+/* @media screen and (max-width: 500px) {
+  span {
+    background-color: red;
+  }
+} */
