--- a/src/app/serenazgo/home/home.component.html
+++ b/src/app/serenazgo/home/home.component.html
@@ -1,12 +1,40 @@
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary"> -->
+
   <!-- <span>Seguridad Ciudadana</span> -->
-  <span class="example-spacer"></span>
+
+ <!--  <span class="example-spacer"></span>
   <button routerLink="/serenazgo/unidad" mat-button>Unidad</button>
   <button routerLink="/serenazgo/sereno" mat-button>Sereno</button>
   <button routerLink="/serenazgo/serenos" mat-button>Serenos</button>
   <span class="example-spacer"></span>
   <mat-icon matTooltip="Cerrar sesión" matTooltipPosition="left" style="cursor: pointer"
     (click)="logout()">logout</mat-icon>
-</mat-toolbar>
+</mat-toolbar> -->
 
-<router-outlet></router-outlet>
+<div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary" class="example-toolbar">
+    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <h1 class="example-app-name">Responsive App</h1>
+  </mat-toolbar>
+
+  <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
+      fixedTopGap="56">
+      <mat-nav-list>
+        <a mat-list-item routerLink="/serenazgo/unidad" class="item"> <mat-icon>person</mat-icon> Unidad</a>
+        <a mat-list-item routerLink="/serenazgo/sereno" class="item">Sereno</a>
+        <a mat-list-item routerLink="/serenazgo/serenos" class="item">Serenos</a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    
+
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
+
+
+
+<!-- <router-outlet></router-outlet> -->
