--- a/src/app/serenazgo/home/home.component.html
+++ b/src/app/serenazgo/home/home.component.html
@@ -21,7 +21,7 @@
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
       fixedTopGap="56">
       <mat-nav-list>
-        <a mat-list-item routerLink="/serenazgo/unidad" class="item"> <mat-icon>person</mat-icon> Unidad</a>
+        <a mat-list-item routerLink="/serenazgo/unidad" class="item"> Unidad</a>
         <a mat-list-item routerLink="/serenazgo/sereno" class="item">Sereno</a>
         <a mat-list-item routerLink="/serenazgo/serenos" class="item">Serenos</a>
       </mat-nav-list>
