--- a/src/app/serenazgo/home/home.component.html
+++ b/src/app/serenazgo/home/home.component.html
@@ -1,40 +1,24 @@
-<!-- <mat-toolbar color="primary"> -->
-
-  <!-- <span>Seguridad Ciudadana</span> -->
-
- <!--  <span class="example-spacer"></span>
-  <button routerLink="/serenazgo/unidad" mat-button>Unidad</button>
-  <button routerLink="/serenazgo/sereno" mat-button>Sereno</button>
-  <button routerLink="/serenazgo/serenos" mat-button>Serenos</button>
-  <span class="example-spacer"></span>
-  <mat-icon matTooltip="Cerrar sesión" matTooltipPosition="left" style="cursor: pointer"
-    (click)="logout()">logout</mat-icon>
-</mat-toolbar> -->
-
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
   <mat-toolbar color="primary" class="example-toolbar">
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-    <h1 class="example-app-name">Responsive App</h1>
+    <h1 class="example-app-name">App</h1>
+    <span class="example-spacer"></span>
+    <button mat-icon-button matTooltip="Mi Perfil" class="example-icon"><mat-icon>person</mat-icon></button>
+    <button mat-icon-button matTooltip="Cerrar Sesión" class="example-icon"(click)="logout()"><mat-icon>logout</mat-icon></button>
   </mat-toolbar>
 
   <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
       fixedTopGap="56">
       <mat-nav-list>
-        <a mat-list-item routerLink="/serenazgo/unidad" class="item"> Unidad</a>
-        <a mat-list-item routerLink="/serenazgo/sereno" class="item">Sereno</a>
-        <a mat-list-item routerLink="/serenazgo/serenos" class="item">Serenos</a>
+        <a mat-list-item routerLink="/serenazgo/unidad">Unidad</a>
+        <a mat-list-item routerLink="/serenazgo/sereno">Sereno</a>
+        <a mat-list-item routerLink="/serenazgo/serenos">Serenos</a>
       </mat-nav-list>
     </mat-sidenav>
-
-    
 
     <mat-sidenav-content>
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
-
-
-
-<!-- <router-outlet></router-outlet> -->
