--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
         <mat-card-title>Inicar sesión</mat-card-title>
 
         <mat-card-content>
-          <mat-form-field appearance="fill" style="width: 236px">
+          <mat-form-field appearance="fill" style="width: 195px">
             <mat-label>Ingresa su dni</mat-label>
             <input matInput formControlName="dni" required maxlength="8" />
             <mat-error *ngIf="loginForm.get('dni')?.invalid"
@@ -15,7 +15,7 @@
             <!-- <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error> -->
           </mat-form-field>
 
-          <mat-form-field appearance="fill">
+          <mat-form-field appearance="fill" style="width: 195px;">
             <mat-label>Ingresa contraseña</mat-label>
             <input
               matInput
@@ -56,3 +56,19 @@
     </mat-card>
   </div>
 </div>
+
+
+<!-- <div class="body-2">
+  <div class="flex-login">
+    <mat-card class="card-login">
+      <mat-card-title>Iniciar Sesión</mat-card-title>
+
+      <mat-card-content>
+        <mat-form-field appearance="fill" style="width: 236px">
+          <mat-label>Ingrese su DNI</mat-label>
+          <input matInput>
+        </mat-form-field>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div> -->
