--- a/src/app/serenazgo/home/home.component.html
+++ b/src/app/serenazgo/home/home.component.html
@@ -3,6 +3,7 @@
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 class="example-app-name">App</h1>
     <span class="example-spacer"></span>
+    <mat-slide-toggle matTooltip="Modo oscuro" color="primary" [formControl]="toggleControl"></mat-slide-toggle>
     <button mat-icon-button matTooltip="Mi Perfil" class="example-icon"><mat-icon>person</mat-icon></button>
     <button mat-icon-button matTooltip="Cerrar Sesión" class="example-icon"(click)="logout()"><mat-icon>logout</mat-icon></button>
   </mat-toolbar>
