--- a/src/app/serenazgo/home/home.component.html
+++ b/src/app/serenazgo/home/home.component.html
@@ -10,11 +10,11 @@
 
   <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
-      fixedTopGap="56">
-      <mat-nav-list>
-        <a mat-list-item routerLink="/serenazgo/unidad">Unidad</a>
-        <a mat-list-item routerLink="/serenazgo/sereno">Sereno</a>
-        <a mat-list-item routerLink="/serenazgo/serenos">Serenos</a>
+      fixedTopGap="56" >
+      <mat-nav-list style="margin-right: 5vw;">
+        <a mat-list-item routerLink="/serenazgo/unidad"><fa-icon [icon]="faCarSide" size="lg"></fa-icon> Unidad</a>
+        <a mat-list-item routerLink="/serenazgo/serenos"><fa-icon [icon]="faPersonMilitaryPointing" size="lg"></fa-icon> Serenos</a>
+        <a mat-list-item routerLink="/serenazgo/grupos"><fa-icon [icon]="faPeopleGroup" size="lg"></fa-icon> Grupos</a>
       </mat-nav-list>
     </mat-sidenav>
 
