--- a/src/app/serenazgo/grupos/agregar/agregar.component.html
+++ b/src/app/serenazgo/grupos/agregar/agregar.component.html
@@ -30,7 +30,7 @@
                 <!-- Descripción -->
                 <mat-form-field appearance="fill">
                     <mat-label>Descripción</mat-label>
-                    <textarea formControlName="descripcion" matInput></textarea>
+                    <textarea formControlName="desc" matInput></textarea>
                 </mat-form-field>
 
             </div>
