--- a/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
+++ b/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
@@ -44,33 +44,10 @@
       <ng-container matColumnDef="iconos">
         <th mat-header-cell *matHeaderCellDef>Acción</th>
         <td mat-cell *matCellDef="let element; let i = index">
-          <button
-            mat-icon-button
-            color="warn"
-            aria-label="Example"
-            matTooltip="Eliminar"
-            (click)="eliminar(element.id_sereno)"
-          >
-            <mat-icon>delete</mat-icon>
-          </button>
-          <button
-            mat-icon-button
-            color="primary"
-            aria-label="Example"
-            matTooltip="Ver más"
-            [routerLink]="['/serenazgo/serenos/versereno', element.id_sereno]"
-          >
-            <mat-icon>info</mat-icon>
-          </button>
-          <button
-            mat-icon-button
-            color="accent"
-            aria-label="Example"
-            matTooltip="Editar"
-            [routerLink]="['/serenazgo/serenos/editar', element.id_sereno]"
-          >
-            <mat-icon>edit</mat-icon>
-          </button>
+          <button mat-icon-button color="warn" matTooltip="Eliminar" (click)="eliminar(element.id_sereno)"><mat-icon>delete</mat-icon></button>
+          <button mat-icon-button color="primary" matTooltip="Ver más" [routerLink]="['/serenazgo/serenos/versereno', element.id_sereno]"><mat-icon>info</mat-icon></button>
+          <button mat-icon-button color="accent" matTooltip="Editar" [routerLink]="['/serenazgo/serenos/editar', element.id_sereno]"><mat-icon>edit</mat-icon></button>
+          <button mat-icon-button color="warn" matTooltip="Añadir a grupo" [routerLink]="['/serenazgo/serenos/addgroup']"><mat-icon>group_add</mat-icon></button>
         </td>
       </ng-container>
 
