table add patrullaje into sereno

--- a/src/app/serenazgo/serenos/select-group/select-group.component.css
+++ b/src/app/serenazgo/serenos/select-group/select-group.component.css
@@ -1,4 +1,28 @@
-/* .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  } */
+.container {
+  margin: 0 20vw;
+}
+
+.demo-table {
+  width: 100%;
+}
+
+.mat-mdc-row .mat-mdc-cell {
+  border-bottom: 1px solid transparent;
+  border-top: 1px solid transparent;
+  cursor: pointer;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+  border-color: currentColor;
+}
+
+.demo-row-is-clicked {
+  font-weight: bold;
+}
+
+/* < 600 */
+@media only screen and (max-width: 600px) {
+  .container {
+    margin: 0 2vw;
+  }
+}
