--- a/src/app/serenazgo/serenos/select-group/select-group.component.html
+++ b/src/app/serenazgo/serenos/select-group/select-group.component.html
@@ -1,16 +1,69 @@
-<mat-card>
-    <mat-card-header>
-        <mat-card-title-group>
-            <mat-card-title>Nombres y apellidos</mat-card-title>
-            <mat-card-subtitle>Diego Jose Cruz Neciosup</mat-card-subtitle>
-            <mat-card-title>Genero</mat-card-title>
-            <mat-card-subtitle>Masculino</mat-card-subtitle>
-            <mat-card-title>Edad</mat-card-title>
-            <mat-card-subtitle>27 años</mat-card-subtitle>
-            <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg">
-        </mat-card-title-group>
-    </mat-card-header>  
-    <mat-card-actions>
+<div class="container">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title-group>
+                <mat-card-title>Nombres y apellidos</mat-card-title>
+                <mat-card-subtitle>Diego Jose Cruz Neciosup</mat-card-subtitle>
+                <mat-card-title>Genero</mat-card-title>
+                <mat-card-subtitle>Masculino</mat-card-subtitle>
+                <mat-card-title>Edad</mat-card-title>
+                <mat-card-subtitle>27 años</mat-card-subtitle>
+                <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+            </mat-card-title-group>
+        </mat-card-header>       
+    </mat-card>
+</div>
 
-    </mat-card-actions>
+<br>
+
+<mat-card>
+    <mat-card-content>
+      <table mat-table [dataSource]="patrullajes" class="mat-elevation-z8 demo-table">     
+        
+        <!-- N° Serenos -->
+        <ng-container matColumnDef="num_sere">
+          <th mat-header-cell *matHeaderCellDef>N° Serenos</th>
+          <td mat-cell *matCellDef="let element">{{element.num_sere}}</td>
+        </ng-container>
+
+        <!-- Turno -->
+        <ng-container matColumnDef="turno">
+          <th mat-header-cell *matHeaderCellDef>Turno</th>
+          <td mat-cell *matCellDef="let element">{{element.turno}}</td>
+        </ng-container>
+
+        <!-- Unidad -->
+        <ng-container matColumnDef="unidad">
+          <th mat-header-cell *matHeaderCellDef>Placa</th>
+          <td mat-cell *matCellDef="let element">{{element.placa}}</td>
+        </ng-container>
+
+        <!-- Tipo de unidad -->
+        <ng-container matColumnDef="tipo_uni">
+          <th mat-header-cell *matHeaderCellDef>Unidad</th>
+          <td mat-cell *matCellDef="let element">{{element.tipo_unidad}}</td>
+        </ng-container>      
+
+
+        <tr mat-header-row *matHeaderRowDef="colum_patru"></tr>
+          <tr
+              mat-row
+              (click)="clickedFilas.push(row)"
+              *matRowDef="let row; columns: colum_patru;"
+              ></tr>
+            <!-- [class.demo-row-is-clicked]="clickedFilas.has(row)" -->
+
+      </table>
+
+      <div><h3>Click Log</h3></div>
+      
+      <ul>
+        <li *ngFor="let clickedRow of clickedFilas"> Click en {{clickedRow.placa}} </li>        
+      </ul>
+
+      <h4>{{ clickedFilas[clickedFilas.length - 1] | json }}</h4>
+      <h4>{{ clickedFilas[0] | json }}</h4>
+      <h4>{{ clickedFilas.length }}</h4>
+
+    </mat-card-content>
 </mat-card>
