--- a/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
+++ b/src/app/serenazgo/serenos/list-serenos/list-serenos.component.html
@@ -41,13 +41,25 @@
       </ng-container>
 
       <!-- Column -->
+      <ng-container matColumnDef="fk_patrullaje">
+        <th mat-header-cell *matHeaderCellDef>Tiene grupo</th>
+        <td mat-cell *matCellDef="let element" >
+          <mat-chip-listbox>
+            <mat-chip-option selected style="pointer-events: none;" [color]="element.fk_patrullaje ? 'primary' : 'warn'">
+              {{ element.fk_patrullaje ? "Si" : "No" }}
+            </mat-chip-option>
+          </mat-chip-listbox>
+        </td>
+      </ng-container>
+
+      <!-- Column -->
       <ng-container matColumnDef="iconos">
         <th mat-header-cell *matHeaderCellDef>Acción</th>
         <td mat-cell *matCellDef="let element; let i = index">
-          <button mat-icon-button color="warn" matTooltip="Eliminar" (click)="eliminar(element.id_sereno)"><mat-icon>delete</mat-icon></button>
-          <button mat-icon-button color="primary" matTooltip="Ver más" [routerLink]="['/serenazgo/serenos/versereno', element.id_sereno]"><mat-icon>info</mat-icon></button>
           <button mat-icon-button color="accent" matTooltip="Editar" [routerLink]="['/serenazgo/serenos/editar', element.id_sereno]"><mat-icon>edit</mat-icon></button>
-          <button mat-icon-button color="warn" matTooltip="Añadir a grupo" [routerLink]="['/serenazgo/serenos/addgroup']"><mat-icon>group_add</mat-icon></button>
+          <button mat-icon-button color="primary" matTooltip="Ver más" [routerLink]="['/serenazgo/serenos/versereno', element.id_sereno]"><mat-icon>info</mat-icon></button>
+          <button mat-icon-button color="accent" matTooltip="Añadir a grupo" [routerLink]="['/serenazgo/serenos/addgroup']"><mat-icon>group_add</mat-icon></button>
+          <button *ngIf="!element.fk_patrullaje" mat-icon-button color="warn" matTooltip="Eliminar" (click)="eliminar(element.id_sereno)"><mat-icon>delete</mat-icon></button>
         </td>
       </ng-container>
 
