--- a/src/app/serenazgo/serenos/select-group/select-group.component.html
+++ b/src/app/serenazgo/serenos/select-group/select-group.component.html
@@ -8,9 +8,16 @@
                 <mat-card-subtitle>Masculino</mat-card-subtitle>
                 <mat-card-title>Edad</mat-card-title>
                 <mat-card-subtitle>27 años</mat-card-subtitle>
+                <mat-card-title>Patrullaje</mat-card-title>                
+                <mat-card-subtitle *ngIf="clickedFilas.length > 0">{{ clickedFilas[clickedFilas.length - 1]['placa'] }}</mat-card-subtitle>
+                <mat-card-subtitle *ngIf="clickedFilas.length < 1">Seleccione elemento de la tabla</mat-card-subtitle>                
                 <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg">
             </mat-card-title-group>
-        </mat-card-header>       
+        </mat-card-header>   
+        <mat-card-actions align="end">
+          <button mat-raised-button color="accent" style="margin-right: 10px;" [routerLink]="['/serenazgo/serenos']">Regresar</button>
+          <button mat-raised-button color="primary">Aceptar</button>
+        </mat-card-actions>    
     </mat-card>
 </div>
 
@@ -18,31 +25,31 @@
 
 <mat-card>
     <mat-card-content>
-      <table mat-table [dataSource]="patrullajes" class="mat-elevation-z8 demo-table">     
-        
-        <!-- N° Serenos -->
-        <ng-container matColumnDef="num_sere">
-          <th mat-header-cell *matHeaderCellDef>N° Serenos</th>
-          <td mat-cell *matCellDef="let element">{{element.num_sere}}</td>
-        </ng-container>
-
+      <table mat-table [dataSource]="patrullajes" class="mat-elevation-z8 demo-table" matSort>            
+     
         <!-- Turno -->
         <ng-container matColumnDef="turno">
-          <th mat-header-cell *matHeaderCellDef>Turno</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Turno</th>
           <td mat-cell *matCellDef="let element">{{element.turno}}</td>
         </ng-container>
 
-        <!-- Unidad -->
-        <ng-container matColumnDef="unidad">
-          <th mat-header-cell *matHeaderCellDef>Placa</th>
+        <!-- Placa -->
+        <ng-container matColumnDef="placa">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Placa</th>
           <td mat-cell *matCellDef="let element">{{element.placa}}</td>
         </ng-container>
+       
+         <!-- N° Serenos -->
+         <ng-container matColumnDef="num_sere">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>N° Serenos</th>
+          <td mat-cell *matCellDef="let element">{{element.num_sere}}</td>
+        </ng-container>
 
-        <!-- Tipo de unidad -->
-        <ng-container matColumnDef="tipo_uni">
-          <th mat-header-cell *matHeaderCellDef>Unidad</th>
+         <!-- Tipo de unidad -->
+         <ng-container matColumnDef="tipo_unidad">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Unidad</th>
           <td mat-cell *matCellDef="let element">{{element.tipo_unidad}}</td>
-        </ng-container>      
+        </ng-container>
 
 
         <tr mat-header-row *matHeaderRowDef="colum_patru"></tr>
@@ -54,16 +61,6 @@
             <!-- [class.demo-row-is-clicked]="clickedFilas.has(row)" -->
 
       </table>
-
-      <div><h3>Click Log</h3></div>
-      
-      <ul>
-        <li *ngFor="let clickedRow of clickedFilas"> Click en {{clickedRow.placa}} </li>        
-      </ul>
-
-      <h4>{{ clickedFilas[clickedFilas.length - 1] | json }}</h4>
-      <h4>{{ clickedFilas[0] | json }}</h4>
-      <h4>{{ clickedFilas.length }}</h4>
-
-    </mat-card-content>
+      <mat-paginator [pageSizeOptions]="[10,20,30]"></mat-paginator>
+    </mat-card-content>    
 </mat-card>
