--- a/src/app/serenazgo/user/profile/profile.component.html
+++ b/src/app/serenazgo/user/profile/profile.component.html
@@ -1,1 +1,27 @@
-<p>profile works!</p>
+<h1 class="h1-title">Mis Datos</h1>
+
+<div class="flex">
+  <mat-card class="child">
+    <mat-card-header>
+      <mat-card-title>Datos Personales</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <h4>Contenido...</h4>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>Editar</button>
+    </mat-card-actions>
+  </mat-card>
+
+  <mat-card class="child">
+    <mat-card-header>
+      <mat-card-title>Datos Personales</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <h4>Contenido...</h4>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>Editar</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
