--- a/src/app/serenazgo/home/home.component.html
+++ b/src/app/serenazgo/home/home.component.html
@@ -7,7 +7,7 @@
 
     <button mat-icon-button matTooltip="Usuario" [matMenuTriggerFor]="menu" class="example-icon"><mat-icon>person</mat-icon></button>
     <mat-menu #menu="matMenu" xPosition="before">
-      <button mat-menu-item routerLink="/serenazgo/user/profile">Mis datos</button>
+      <button mat-menu-item routerLink="/serenazgo/user/profile">Mis perfil</button>
       <button mat-menu-item routerLink="/serenazgo/user/dashboard">Mis estadísticas</button>
     </mat-menu>
 
