migration mysql db

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,7 +16,7 @@
           </mat-form-field>
 
           <mat-form-field appearance="fill" style="width: 195px;">
-            <mat-label>Ingresa contraseña</mat-label>
+            <mat-label>Contraseña</mat-label>
             <input
               matInput
               [type]="hide ? 'password' : 'text'"
