--- a/src/app/serenazgo/unidad/dialogaddedit/dialogaddedit.component.html
+++ b/src/app/serenazgo/unidad/dialogaddedit/dialogaddedit.component.html
@@ -22,10 +22,10 @@
         <mat-form-field appearance="fill" style="margin-top: 13px; width: 222px;">
             <mat-label>Tipo de unidad</mat-label>
             <mat-select required formControlName="tipo_unidad">
-                <mat-option value="1">Camioneta</mat-option>
-                <mat-option value="2">Auto</mat-option>
+                <mat-option value="1">Auto</mat-option>
+                <mat-option value="2">Camioneta</mat-option>
                 <mat-option value="3">Motocicleta</mat-option>
-                <mat-option value="4">Camion</mat-option>
+                <mat-option value="4">Camión</mat-option>
             </mat-select>
         </mat-form-field>
 
